crux-mir/test/symb_eval/union/init_cond.good
test init_cond/<DISAMB>::foo[0]: returned 4660, FAILED

failures:

---- init_cond/<DISAMB>::foo[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/union/init_cond.rs:14:13: 18:6: error: in init_cond/<DISAMB>::foo[0]
[Crux]   bad MirAggregate merge: offset 0: type mismatch: IntrinsicRepr MirAggregate [] != BVRepr 16

[Crux] Overall status: Invalid.
